# eu-company-mcp-server

./: .gitignore  README.md  pyproject.toml
src/: config.py  server.py
src/clients/: beneficial_owners.py  eurostat.py  gleif.py  insolvency.py  sanctions.py  vies.py
src/tools/: company.py  compliance.py  statistics.py  vat.py
