[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eu-company-mcp-server"
version = "0.2.0"
description = "MCP server for EU company data — GLEIF search, VAT validation, Eurostat statistics, sanctions screening, insolvency search, beneficial ownership"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AiAgentKarl" }]
keywords = ["mcp", "company", "business", "gleif", "lei", "vat", "eurostat", "due-diligence", "sanctions", "aml", "kyc", "insolvency", "beneficial-ownership", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/eu-company-mcp-server"
Repository = "https://github.com/AiAgentKarl/eu-company-mcp-server"

[project.scripts]
eu-company-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
